[gd_scene load_steps=7 format=3 uid="uid://cswhyr2ikwlmv"]

[ext_resource type="Texture2D" uid="uid://dbwk8jav5x7cd" path="res://assets/hud/slots/hand/slot_bg.png" id="1_tth06"]
[ext_resource type="Script" uid="uid://do4gkbucdm4yc" path="res://scenes/hud/slots/hand/slot_hand.gd" id="2_p2fpt"]
[ext_resource type="Texture2D" uid="uid://c1c2qftm7om6p" path="res://assets/hud/items/no_item.png" id="3_p2fpt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p2fpt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hf1f5"]
bg_color = Color(0.941176, 0.890196, 0.592157, 0.552941)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pkbbb"]
bg_color = Color(0.972549, 0.94902, 0.803922, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[node name="SlotHand" type="TextureButton"]
process_mode = 3
offset_right = 128.0
offset_bottom = 128.0
texture_normal = ExtResource("1_tth06")
script = ExtResource("2_p2fpt")

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 9.0
offset_right = -9.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_p2fpt")
theme_override_styles/fill = SubResource("StyleBoxFlat_hf1f5")
value = 18.93
fill_mode = 3
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_p2fpt")

[node name="ItemName" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_top = -48.0
offset_right = 0.5
offset_bottom = -12.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pkbbb")

[node name="Label" type="Label" parent="ItemName"]
layout_mode = 2
theme_override_colors/font_color = Color(0.243137, 0.121569, 0.0392157, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemCount" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_pkbbb")

[node name="Label" type="Label" parent="ItemCount"]
layout_mode = 2
theme_override_colors/font_color = Color(0.243137, 0.121569, 0.0392157, 1)
theme_override_font_sizes/font_size = 24
text = "x13"
horizontal_alignment = 1
vertical_alignment = 1
